<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signinLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pharmaproject.ahmed.example.packagecom.pharmaproject.Signin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:layout_marginBottom="30dp"

                app:srcCompat="@drawable/logo"
                android:layout_gravity="center"
                android:layout_width="match_parent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:drawablePadding="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/roundedittext"
                android:drawableLeft="@drawable/ph_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:drawablePadding="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/roundedittext"
                android:drawableLeft="@drawable/ph_password"
                android:ems="15"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape"
                android:text="@string/signin"
                android:textColor="#FFFFFF"
                android:textSize="20dp"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/resetpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="left"
                    android:text="Forgotten account?"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="right"
                    android:text="Join Now"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
