<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="Add New Employee"
        android:textColor="#000"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/chooseimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ph_chooseimage"

            />

        <ImageView
            android:id="@+id/imageEmployee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/noperson" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedittext"
            android:drawableLeft="@drawable/ph_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedittext"
            android:drawableLeft="@drawable/ph_password"
            android:hint="ID"
            android:drawablePadding="10dp"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedittext"
            android:drawableLeft="@drawable/ph_person"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedittext"
            android:drawableLeft="@drawable/ph_phone"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="10dp" />


        <Button
            android:id="@+id/add_employee_btn"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:elevation="5dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="3dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="save"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

    </LinearLayout>
</LinearLayout>